--- a/Desktop/projects/run-buddy/index.html
+++ b/Desktop/projects/run-buddy/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>RUN BUDDY</h1>
-    <p>What We Do 🏃</p>
+    <p>What We Do 🏃 What You Do Your Trainer Reach Out</p>
     
 </body>
 </html>
