--- a/Desktop/projects/run-buddy/index.html
+++ b/Desktop/projects/run-buddy/index.html
@@ -5,8 +5,33 @@
     <title>Run Buddy</title>
 </head>
 <body>
+    <header>
     <h1>RUN BUDDY</h1>
-    <p>What We Do 🏃 What You Do Your Trainer Reach Out</p>
+    </header>
+   <!--hero/jumbotron-->
+    <section>
+    </section>
+    <!--"What we do" section-->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+    <!--"what you do" section-->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+    <!--"meet the trainer" section-->
+    <section>
+        <h2>Meet The Trainer</h2>
+    </section>
+    <!--"reach ou" section-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!--footer-->
+    <footer>
+        <h2>❤️ Made with love by Run Buddy.</h2>
+    </footer>        
     
 </body>
 </html>
